--- a/cs497WebProject/app/config/config.yml
+++ b/cs497WebProject/app/config/config.yml
@@ -1,5 +1,5 @@
 imports:
-#    - { resource: foselasticabundle.yml }
+    - { resource: foselasticabundle.yml }
     - { resource: parameters.yml }
     - { resource: security.yml }
     - { resource: services.yml }
@@ -78,3 +78,5 @@ fos_user:
     from_email:
         address: "%mailer_user%"
         sender_name: "%mailer_user%"
+
+
